# misc

./: .gitignore
SpMV/: README.md  coo2csr.c  main.c  mm2coo.c  sample.mtx
adventofcode/: README.md
adventofcode/2021/: note.md
adventofcode/2023/: Cargo.toml  Makefile  README.md
binary-loader/: Makefile  loader.cc  loader.h  loader_demo.cc  sample.cc
cache-eviction/: Makefile  README.md  main.c
drken-book/: Cargo.toml
drken-book/src/: 1-meiro.rs  3-abc45c.rs  3-abc51b.rs  3-abc81b.rs  5-contest.rs  5-edit_distance.rs  5-frog1.rs  5-frog2.rs  5-knapsack1.rs  5-vacation.rs  6-1.rs  6-abc23d.rs  6-abc77c.rs  6-minpair.rs  7-1.rs  7-abc131d.rs  7-agc9a.rs  7-interval.rs
drken-book/test/: 1-meiro.in1  1-meiro.in2  1-meiro.in3
go-tutorial/greetings/: greetings.go  greetings_test.go
go-tutorial/hello/: go.mod  hello.go
knn/: Cargo.toml  test.sh
knn/data/: CITATION.md  test.data  training.data
knn/src/: main.rs
lifegame-rs/: Cargo.toml  README.md
lifegame-rs/src/: game.rs  main.rs  pattern.rs  ui.rs
linux-system-programming/: gap_seek.c  nonblocking_read.c  poll.c  safe_read.c  select.c
llnl-pthread-tutorial/: Makefile  README.md  creating-terminating.c  note.md  stack-management.c  using-condition-variables.c
logn-fibonacci/: Cargo.toml
logn-fibonacci/src/: exponential.rs  liner.rs  logn.rs  main.rs  mat2.rs
mpi-pingpong/: .clang-format  Makefile  README.md  pingpong.c  plot.gnuplot
openai-tts/: .gitignore  README.md  conda_requirements.txt  tts.py
opencv-tutorial/: CMakeLists.txt  hello.cpp  mat.cpp  scan.cpp  tmp.cpp
pi/: Cargo.toml  README.md  run.sh
pi/src/: main.rs
rayt/: LICENSE  README.md
rayt/code102/: Cargo.toml
rayt/code103/: Cargo.toml
rayt/code104/: Cargo.toml
rayt/code106/: Cargo.toml
rayt/code107/: Cargo.toml
rayt/code108/: Cargo.toml
rayt/code109/: Cargo.toml
rayt/code110/: Cargo.toml
rayt/code111/: Cargo.toml
rayt/code112/: Cargo.toml
rayt/code113/: Cargo.toml
rayt/code114/: Cargo.toml
rayt/code115/: Cargo.toml
rayt/code116/: Cargo.toml
rayt/code117/: Cargo.toml
rayt/code201/: Cargo.toml
rayt/rayt/: Cargo.toml
rust-the-book/deref-coercion/: Cargo.toml
rust-the-book/refcell-rc-cons-list/: Cargo.toml
sevendayshpc/: .gitignore  README.md
sevendayshpc/day1/: hello.cpp
sevendayshpc/day3/: mpi-pi.cpp  mpi-reduce-pi.cpp  pi.cpp  pp.cpp
sevendayshpc/day4/: Makefile  gather.cpp  mpi-thermal.cpp  (+2 more)
strcpy/: O0_idiot  O3_idiot  README.md  bench.c  memcpy  plot.gnuplot  strcpy
tp/: Cargo.toml  note.md
tsort-rs/: Cargo.toml  test.sh
zennendougetsu/: README.md  gen-data.sh  zennendougetsu.gnuplot
(+63 files in other folders)
