[package]
name = "drken-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
proconio = "0.4.5"
superslice = "1.0.0"

[[bin]]
name = "1-meiro"
path = "src/1-meiro.rs"

[[bin]]
name = "3-abc81b"
path = "src/3-abc81b.rs"

[[bin]]
name = "3-abc51b"
path = "src/3-abc51b.rs"

[[bin]]
name = "3-abc45c"
path = "src/3-abc45c.rs"

[[bin]]
name = "5-frog1"
path = "src/5-frog1.rs"

[[bin]]
name = "5-knapsack1"
path = "src/5-knapsack1.rs"

[[bin]]
name = "5-edit_distance"
path = "src/5-edit_distance.rs"

[[bin]]
name = "5-vacation"
path = "src/5-vacation.rs"

[[bin]]
name = "5-frog2"
path = "src/5-frog2.rs"

[[bin]]
name = "5-contest"
path = "src/5-contest.rs"

[[bin]]
name = "6-minpair"
path = "src/6-minpair.rs"

[[bin]]
name = "6-abc23d"
path = "src/6-abc23d.rs"

[[bin]]
name = "6-1"
path = "src/6-1.rs"

[[bin]]
name = "6-abc77c"
path = "src/6-abc77c.rs"

[[bin]]
name = "7-interval"
path = "src/7-interval.rs"

[[bin]]
name = "7-agc9a"
path = "src/7-agc9a.rs"

[[bin]]
name = "7-1"
path = "src/7-1.rs"

[[bin]]
name = "7-abc131d"
path = "src/7-abc131d.rs"